k8s/infra/happydomain/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: happydomain
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
