k8s/infra/happydomain/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: happydomain
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - dns.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: happydomain
          port: 80
