k8s/infra/happydomain/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: happydomain
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: dns.lama.tel
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: happydomain
                port:
                  name: http
  tls:
    - hosts:
        - dns.lama.tel
      secretName: happydomain-tls
